# orca

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  package.xml
.cmake/: FindqpOASES.cmake
cmake/: FindEigen3.cmake  FindXenomai.cmake  orca-extras.cmake  orcaConfig.cmake.in
docker/ros_tools/: Dockerfile
docker/self_contained/: bionic.Dockerfile  trusty.Dockerfile
docs/: Doxyfile.in  Doxyfile_RTD.in  Makefile  make.bat
docs/source/: conf.py  index.rst  license.rst  orcastyle.sty
docs/source/_static/css/: reset-syntax.css
docs/source/_templates/: layout.html
docs/source/api/: api_docs.rst
docs/source/api/html/: dummy.rst
docs/source/controller_formulation/: overview.rst
docs/source/controller_formulation/constraints/: actuator_limits.rst  constraints.rst  contacts.rst  dynamics.rst  dynamics_equation.rst  joint_limits.rst
docs/source/controller_formulation/dynamics/: dynamics.rst
docs/source/controller_formulation/optim/: optimization_problem.rst  optimization_vector.rst
docs/source/controller_formulation/resolution_strategies/: generalized.rst  multi_level_weighted.rst  one_level_weighted.rst  resolution_strategies.rst
docs/source/controller_formulation/tasks/: cartacc.rst  cartesian_acceleration_task.rst  joint_acceleration_task.rst  task_servoing.rst  tasks.rst  torque_task.rst  wrench_task.rst
docs/source/cstrs/: dyn.rst
docs/source/examples/: examples.rst
docs/source/examples/basic/: 01-simple_controller.rst  02-simulating_results.rst
docs/source/examples/gazebo/: 01-single_robot.rst  (+5 more)
docs/source/getting_started/: api_docs.rst  building_docs.rst  install.rst  quick_start.rst  using_the_lib.rst  where_to_go.rst
docs/source/optim/: optimvect.rst
docs/source/tasks/: cartacc.rst
examples/: CMakeLists.txt  gazebo-demo-load-robot.cc  gazebo-demo-multi-robot.cc  gazebo-demo-single-robot.cc  iDynTreeExample.cc  iDynTreeTests.cc  lwr.urdf  orca-demo0.cc  orca-demo1-gazebo.cc  orca-demo1.cc  orca-gazebo-robot-demo-gravity-compensation.cc  orca-gazebo-robot-demo.cc
examples/basic/: 00-load_robot_model.cc  01-simple_controller.cc  02-simulating_results.cc  03-configure_task_from_yaml.cc  03-loading_from_file.cc  04-configure_robot_from_yaml.cc  05-configure_from_yaml.cc  CMakeLists.txt  orca-demo0.cc
examples/gazebo/: 00-load_gazebo_model.cc  01-single_robot.cc  02-multi_robot.cc  03-set_robot_state.cc  04-set_robot_state_gravity_compensation.cc  05-orca_gazebo.cc  06-trajectory_following.cc  07-orca_gazebo_wrench_task.cc  CMakeLists.txt  orca-gazebo-robot-demo-gravity-compensation.cc
examples/lwr/: lwr.urdf  model.config  model.sdf
examples/plotting/: 01-plotting_torques.cc  CMakeLists.txt  orca-demo0-plot.cc
examples/resources/: CMakeLists.txt  human.urdf  icub.urdf  lwr.urdf  panda.urdf  ur10.urdf  ur3.urdf
include/orca/: orca.h
include/orca/common/: CartesianAccelerationPID.h  CartesianServoController.h  Config.h  ConfigurableOrcaObject.h  Factory.h  Mutex.h  OrcaObject.h  PIDController.h  PIDFunctions.h  Parameter.h  ParameterBase.hh  ParameterData.h  ParameterSharedPtr.h  ReturnCode.h  ServoingController.h  SimpleFactory.h  TaskBase.h  TaskCommon.h  TaskState.h  Wrench.h  WrenchData.h
include/orca/constraint/: ConstraintData.h  Contact.h  ContactExistenceConditionConstraint.h  DynamicsEquationConstraint.h  EqualityConstraint.h  GenericConstraint.h  JointAccelerationLimitConstraint.h  JointLimitConstraint.h  JointPositionLimitConstraint.h  JointTorqueLimitConstraint.h  JointVelocityLimitConstraint.h  LinearizedCoulombConstraint.h
include/orca/gazebo/: GazeboModel.h  GazeboServer.h  Utils.h
include/orca/math/: AffineFunction.h  ConstraintFunction.h  GenericFunction.h  Utils.h  WeightedEuclidianNormFunction.h
include/orca/optim/: ControlProblem.h  ControlVariable.h  ControlVariableMapping.h  Controller.h  OptimisationVector.OLD  OptimisationVector.h  Problem.h  ProblemData.h  QPSolver.h  QPSolverImpl.h  QPSolverImplType.h  ResolutionStrategy.h  WeightedProblem.h  WeightedQPSolver.OLD  WeightedQPSolver.h
include/orca/robot/: RobotDynTree.h  RobotModel.h
include/orca/rtt/: rtt-RobotModelHelper.h
include/orca/task/: CartesianTask.h  GenericTask.h  JointAccelerationTask.h  JointTorqueTask.h  RegularisationTask.h  WrenchTask.h
include/orca/util/: Logger.h  Utils.h
include/orca/utils/: Logger.h  Utils.h
rtt-src/: reset-test.ops  rtt-Contact.cc  rtt-DynEq.cc  rtt-reset-test.cc
rtt_src/: RttCartesianTask.cc  RttContact.cc  RttDynamicsEquationConstraint.cc  RttJointAccelerationTask.cc  RttOrcaLoggerService.cc  RttOrcaRegisterService.cc  RttQPSolver.cc  RttRegularisationTask.cc  RttWrenchTask.cc  rtt-Contact.cc  rtt-DynEq.cc  rtt-signals-tests.cc  rtt_orca-test.ops  test.ops
src/common/: CartesianAccelerationPID.cc  CartesianServoController.cc  Config.cc  ConfigurableOrcaObject.cc  Mutex.cc  PIDController.cc  TaskBase.cc  TaskCommon.cc  Wrench.cc
src/constraint/: Contact.cc  ContactExistenceConditionConstraint.cc  DynamicsEquationConstraint.cc  EqualityConstraint.cc  GenericConstraint.cc  JointAccelerationLimitConstraint.cc  JointLimitConstraint.cc  JointPositionLimitConstraint.cc  JointTorqueLimitConstraint.cc  JointVelocityLimitConstraint.cc  LinearizedCoulombConstraint.cc
src/math/: AffineFunction.cc  ConstraintFunction.cc  WeightedEuclidianNormFunction.cc
src/optim/: ControlProblem.cc  ControlVariableMapping.cc  Controller.cc  OptimisationVector.OLD  OptimisationVector.cc  Problem.cc  QPSolver.cc  QPSolver.cpp  QPSolverImpl_eigQuadProg.impl  QPSolverImpl_osqp.impl  QPSolverImpl_qpOASES.impl  QPSolver_osqp.impl  QPSolver_qpOASES.impl  WeightedProblem.cc  WeightedQPSolver.OLD  WeightedQPSolver.cc  WeightedQPSolver.cpp
src/robot/: RobotDynTree.cc  RobotDynTree_iDynTree.impl  RobotModel.cc  RobotModel_iDynTree.impl  iDynTreeImpl.impl
src/task/: CartesianTask.cc  GenericTask.cc  JointAccelerationTask.cc  JointTorqueTask.cc  WrenchTask.cc
src/util/: Logger.cc
src/utils/: Logger.cc
tests/: CMakeLists.txt  heritance_demo.cc  orca_install_test.cc  orca_parser_test.cc
(+5 files in other folders)
