<?xml version="1.0"?>
<package>
  <name>orca</name>
  <version>2.0.0</version>
  <description>Optimisation-based framework for Robotics Applications</description>

  <maintainer email="info@fuzzylogicrobotics.com">Antoine Hoarau</maintainer>
  <author email="hoarau@isir.upmc.fr">Antoine Hoarau</author>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rtt</build_depend>
  <run_depend>rtt</run_depend>

</package>
