<?xml version="1.0"?>
<package format="2">
  <name>orca</name>
  <version>2.0.0</version>
  <description>Optimization-based framework for Robotics Applications</description>

  <maintainer email="info@fuzzylogicrobotics.com">Fuzzy Logic Robotics</maintainer>
  <author email="info@fuzzylogicrobotics.com">Antoine Hoarau</author>
  <author email="info@fuzzylogicrobotics.com">Ryan Lober</author>

  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>eigen</depend>

</package>
